<resources>
    <string name="app_name">OpenDotaMobile</string>
    <string name="et_text">Enter player/match ID…</string>
    <string name="btn1_text">player</string>
    <string name="btn2_text">match</string>
    <string name="tv_err">an error occurred</string>
    <string name="tv_default">results</string>
    <string name="tv_desc">"player" button displays player\'s best heroes\n"matches" button displays 5 winner nicknames</string>
    <string name="user_login">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="btn_login">Log in</string>
    <string name="btn_minilogin"><u>Log in</u></string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_minisign_up"><u>Sign up</u></string>
    <string name="tv_first_time">First time with us?</string>
    <string name="tv_signup_quote">Already have an account?</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favs">Favourites</string>
    <string name="search_tv1">Search via SteamID…</string>
    <string name="player_btn">player</string>
    <string name="match_btn">match</string>
    <string name="hero_imageview_desc">hero image</string>
    <string name="nickname">willentretenmert</string>
    <string name="button_show_all">Show all</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_editProfile">update nickname</string>
    <string name="empty_time">--:--</string>
    <string name="radiant_victory">Radiant Victory</string>
    <string name="dire_victory">Dire Victory</string>
    <string name="tv_recent_matches">Recent matches:</string>
    <string name="tv_commentstv">Comments (--):</string>
    <string name="edit_nickname">Enter new nickname…</string>
</resources>