<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10.dp"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/user_login"
                android:inputType="textPersonName"
                android:paddingStart="14sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="14sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="177sp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_extrabold"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textColor="@color/buttonTextColor"
        app:backgroundTint="@color/buttonBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.081">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_minisign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@color/background"
        app:fontFamily="@font/inter_extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/First_time">

    </com.google.android.material.textview.MaterialTextView>

    <TextView
        android:id="@+id/First_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/tv_first_time"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>